Added use the default time zone for all messages

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "twbs/bootstrap": "3.3.*@dev",
     "fortawesome/font-awesome": "4.0.*@dev",
     "components/jquery": "2.1.*@dev",
-    "eonasdan/bootstrap-datetimepicker": "^4.15"
+    "eonasdan/bootstrap-datetimepicker": "^4.15",
+    "oro/moment-timezone": "^0.3.1"
   },
   "extra": {
     "branch-alias": {
